# phi2-mps

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/phi2_mps/: cli.py  phi2.py
